--- a/src/digdug.html
+++ b/src/digdug.html
@@ -11,8 +11,11 @@
     </style>
 </head>
 <body>
-<script type="text/javascript" src="src/background.js"></script>
-<script type="text/javascript" src="src/game.js"></script>
+<script type="module" src="src/helper/helper.js"></script>
+<script type="module" src="src/collisionHandlers.js"></script>
+<script type="module" src="src/sprite/player.js"></script>
+<script type="module" src="src/sprite/level_background.js"></script>
+<script type="module" src="src/game.js"></script>
 
 </script>
 
