--- a/src/digdug.html
+++ b/src/digdug.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>digdug</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.12.0/dist/phaser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/easystarjs@0.4.3/src/easystar.min.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -16,8 +17,7 @@
 <script type="module" src="src/sprite/player.js"></script>
 <script type="module" src="src/sprite/level_background.js"></script>
 <script type="module" src="src/game.js"></script>
-
-</script>
+<script type="module" src="src/enemy.js"></script>
 
 </body>
 </html>
