--- a/src/digdug.html
+++ b/src/digdug.html
@@ -11,10 +11,13 @@
     </style>
 </head>
 <body>
+
 <script type="module" src="src/helper/helper.js"></script>
 <script type="module" src="src/collisionHandlers.js"></script>
-<script type="module" src="src/sprite/player.js"></script>
-<script type="module" src="src/sprite/level_background.js"></script>
+<script type="module" src="src/sprites/player.js"></script>
+<script type="module" src="src/sprites/level_background.js"></script>
+<script type="module" src="src/scenes/levelScene.js"></script>
+<script type="module" src="src/scenes/startScene.js"></script>
 <script type="module" src="src/game.js"></script>
 <script type="module" src="src/enemy.js"></script>
 
