--- a/src/digdug.html
+++ b/src/digdug.html
@@ -15,7 +15,9 @@
 <script type="module" src="src/helper/helper.js"></script>
 <script type="module" src="src/collisionHandlers.js"></script>
 <script type="module" src="src/sprites/player.js"></script>
+<script type="module" src="src/lava.js"></script>
 <script type="module" src="src/sprites/levelBackground.js"></script>
+<script type="module" src="src/scenes/levelSceneConfig.js"></script>
 <script type="module" src="src/scenes/levelScene.js"></script>
 <script type="module" src="src/scenes/startScene.js"></script>
 <script type="module" src="src/game.js"></script>
