add enemy group and set gameover boundry limit

--- a/src/digdug.html
+++ b/src/digdug.html
@@ -18,10 +18,11 @@
 <script type="module" src="src/lava.js"></script>
 <script type="module" src="src/sprites/levelBackground.js"></script>
 <script type="module" src="src/scenes/levelSceneConfig.js"></script>
+<script type="module" src="src/enemy.js"></script>
+<script type="module" src="src/enemyManager.js"></script>
 <script type="module" src="src/scenes/levelScene.js"></script>
 <script type="module" src="src/scenes/startScene.js"></script>
 <script type="module" src="src/game.js"></script>
-<script type="module" src="src/enemy.js"></script>
 
 </body>
 </html>
